--- a/frontend/src/assets/styles/_variables.scss
+++ b/frontend/src/assets/styles/_variables.scss
@@ -10,7 +10,7 @@ $BACKCOLOR: #fffbfd;
 
 // social colors
 $KAKAO-YELLOW: #ffeb00;
-$KAKAO-BRWON: #3c1e1e;
+$KAKAO-BROWN: #3c1e1e;
 $NAVER: #03c75a;
 
 // alert colors
