--- a/frontend/src/assets/styles/font.css
+++ b/frontend/src/assets/styles/font.css
@@ -4,49 +4,49 @@
   font-family: "NotoSansThin";
   font-style: normal;
   /* font-weight: 100; */
-  src: url("./fonts/NotoSansKr/NotoSansKR-Thin.woff2") format("woff2"),
-    url("./fonts/NotoSansKr/NotoSansKR-Thin.woff") format("woff"),
-    url("./fonts/NotoSansKr/NotoSansKR-Thin.otf") format("opentype");
+  src: url("./fonts/NotoSansKR-Thin.woff2") format("woff2"),
+    url("./fonts/NotoSansKR-Thin.woff") format("woff"),
+    url("./fonts/NotoSansKR-Thin.otf") format("opentype");
 }
 @font-face {
   font-family: "NotoSansLight";
   font-style: normal;
   /* font-weight: 300; */
-  src: url("./fonts/NotoSansKr/NotoSansKR-Light.woff2") format("woff2"),
-    url("./fonts/NotoSansKr/NotoSansKR-Light.woff") format("woff"),
-    url("./fonts/NotoSansKr/NotoSansKR-Light.otf") format("opentype");
+  src: url("./fonts/NotoSansKR-Light.woff2") format("woff2"),
+    url("./fonts/NotoSansKR-Light.woff") format("woff"),
+    url("./fonts/NotoSansKR-Light.otf") format("opentype");
 }
 @font-face {
   font-family: "NotoSansRegular";
   font-style: normal;
   /* font-weight: 400; */
-  src: url("./fonts/NotoSansKr/NotoSansKR-Regular.woff2") format("woff2"),
-    url("./fonts/NotoSansKr/NotoSansKR-Regular.woff") format("woff"),
-    url("./fonts/NotoSansKr/NotoSansKR-Regular.otf") format("opentype");
+  src: url("./fonts/NotoSansKR-Regular.woff2") format("woff2"),
+    url("./fonts/NotoSansKR-Regular.woff") format("woff"),
+    url("./fonts//NotoSansKR-Regular.otf") format("opentype");
 }
 @font-face {
   font-family: "NotoSansMedium";
   font-style: normal;
   /* font-weight: 500; */
-  src: url("./fonts/NotoSansKr/NotoSansKR-Medium.woff2") format("woff2"),
-    url("./fonts/NotoSansKr/NotoSansKR-Medium.woff") format("woff"),
-    url("./fonts/NotoSansKr/NotoSansKR-Medium.otf") format("opentype");
+  src: url("./fonts/NotoSansKR-Medium.woff2") format("woff2"),
+    url("./fonts/NotoSansKR-Medium.woff") format("woff"),
+    url("./fonts/NotoSansKR-Medium.otf") format("opentype");
 }
 @font-face {
   font-family: "NotoSansBold";
   font-style: normal;
   /* font-weight: 700; */
-  src: url("./fonts/NotoSansKr/NotoSansKR-Bold.woff2") format("woff2"),
-    url("./fonts/NotoSansKr/NotoSansKR-Bold.woff") format("woff"),
-    url("./fonts/NotoSansKr/NotoSansKR-Bold.otf") format("opentype");
+  src: url("./fonts/NotoSansKR-Bold.woff2") format("woff2"),
+    url("./fonts/NotoSansKR-Bold.woff") format("woff"),
+    url("./fonts/NotoSansKR-Bold.otf") format("opentype");
 }
 @font-face {
   font-family: "NotoSansBlack";
   font-style: normal;
   /* font-weight: 900; */
-  src: url("./fonts/NotoSansKr/NotoSansKR-Black.woff2") format("woff2"),
-    url("./fonts/NotoSansKr/NotoSansKR-Black.woff") format("woff"),
-    url("./fonts/NotoSansKr/NotoSansKR-Black.otf") format("opentype");
+  src: url("./fonts/NotoSansKR-Black.woff2") format("woff2"),
+    url("./fonts/NotoSansKR-Black.woff") format("woff"),
+    url("./fonts/NotoSansKR-Black.otf") format("opentype");
 }
 
 /* 숫자 */
