style : font-size 32 추가

--- a/frontend/src/assets/styles/_typography.scss
+++ b/frontend/src/assets/styles/_typography.scss
@@ -31,6 +31,9 @@
 .fs-28 {
   font-size: vw(24px);
 }
+.fs-32 {
+  font-size: vw(32px);
+}
 .fs-36 {
   font-size: vw(36px);
 }
@@ -119,6 +122,9 @@
   .fs-28 {
     font-size: vw-t(24px);
   }
+  .fs-32 {
+    font-size: vw-t(32px);
+  }
   .fs-36 {
     font-size: vw-t(36px);
   }
@@ -162,6 +168,9 @@
   }
   .fs-28 {
     font-size: vw-p(24px);
+  }
+  .fs-32 {
+    font-size: vw-p(32px);
   }
   .fs-36 {
     font-size: vw-p(36px);
