--- a/frontend/src/screens/Home.scss
+++ b/frontend/src/screens/Home.scss
@@ -51,6 +51,63 @@
 
       &--emphasis {
         color: $PINK_SUB;
+        margin-bottom: vw(93px);
+      }
+
+      &-card {
+        width: vw(370px);
+        height: vw(292px);
+
+        padding: vw(38px) vw(69px);
+        background-color: white;
+        box-shadow: 0px 4px 10px 3px rgba(255, 156, 197, 0.11);
+        border-radius: 30px;
+
+        .title {
+          margin-bottom: vw(24px);
+        }
+
+        .line {
+          width: vw(45px);
+          height: 1px;
+
+          margin-bottom: vw(25px);
+
+          border-top: solid 1px $GRAY_CB;
+        }
+
+        .desc {
+          color: $GRAY_61;
+          line-height: 26px;
+        }
+        & + .main__desc-card {
+          margin-left: vw(30px);
+        }
+      }
+    }
+  }
+
+  .logo-container {
+    margin-top: vw(84px);
+    margin-bottom: vw(50px);
+
+    .logo {
+      width: vw(100px);
+      height: vw(100px);
+
+      margin-right: vw(44px);
+      background-color: $WHITE;
+      box-shadow: 2px 4px 8px rgba(181, 181, 181, 0.55);
+      border-radius: 25px;
+    }
+    .p-container {
+      .logo-desc-top {
+        color: $GRAY_32;
+        margin-bottom: vw(10px);
+      }
+
+      .logo-desc-bottom {
+        color: $PINK_SUB;
       }
     }
   }
