fix: card-desc 반응형

--- a/frontend/src/screens/Home.scss
+++ b/frontend/src/screens/Home.scss
@@ -78,7 +78,7 @@
 
         .desc {
           color: $GRAY_61;
-          line-height: 26px;
+          line-height: vw(26px);
         }
         & + .main__desc-card {
           margin-left: vw(30px);
