feat : 스터디 찾기 페이지 퍼블리싱 #21

--- a/frontend/src/assets/styles/_typography.scss
+++ b/frontend/src/assets/styles/_typography.scss
@@ -22,6 +22,9 @@
 .fs-18 {
   font-size: vw(18px);
 }
+.fs-20 {
+  font-size: vw(20px);
+}
 .fs-22 {
   font-size: vw(22px);
 }
@@ -113,6 +116,9 @@
   .fs-18 {
     font-size: vw-t(18px);
   }
+  .fs-20 {
+    font-size: vw-t(20px);
+  }
   .fs-22 {
     font-size: vw-t(22px);
   }
@@ -159,6 +165,9 @@
   }
   .fs-18 {
     font-size: vw-p(18px);
+  }
+  .fs-20 {
+    font-size: vw-p(20px);
   }
   .fs-22 {
     font-size: vw-p(22px);
