feat : 댓글 퍼블리싱 #26

--- a/frontend/src/screens/StudyDetail.scss
+++ b/frontend/src/screens/StudyDetail.scss
@@ -91,7 +91,7 @@
         margin: vw(46px) 0 vw(47px) vw(15px);
       }
       .comment {
-        margin-bottom: vw(89px);
+        margin-bottom: vw(57px); // 89-32
         &__user-img {
           margin-right: vw(20px);
 
