--- a/frontend/src/screens/Login.scss
+++ b/frontend/src/screens/Login.scss
@@ -93,5 +93,8 @@
       margin: vw(4px) vw(8px) vw(4px) 0;
       line-height: vw(17px);
     }
+    a {
+      text-decoration: underline;
+    }
   }
 }
