--- a/frontend/src/screens/JoinAdd.scss
+++ b/frontend/src/screens/JoinAdd.scss
@@ -3,7 +3,7 @@
 
   border-radius: vw(20px);
   width: vw(473px);
-  height: vw(720px);
+  height: vw(730px);
   border: solid 1px $GRAY-DB;
 
   .add_text {
@@ -50,19 +50,44 @@
       margin-top: vw(8px);
     }
   }
+  .add_category {
+    margin: vw(8px) 0;
+    text-align: left;
+    padding: 0 vw(72px) vw(12px) vw(70px);
 
-  .add_catagory {
     &_title {
-      margin: vw(8px) 0 vw(8px) 0;
-      line-height: 23px;
+      line-height: vw(23px);
+      margin: vw(8px) 0 vw(20px) 0;
+    }
+
+    &_options {
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    button {
+      width: vw(64px);
+      height: vw(32px);
+      margin: 0 vw(12px) vw(8px) 0;
+
+      border: 1px solid #ff79ab;
+      border-radius: 10px;
+
+      &:hover,
+      &:active {
+        color: $WHITE;
+        background-color: $PINK-LIGHT;
+      }
     }
   }
+
   .join_add_next_btn {
     width: vw(329px);
     height: vw(48px);
     border-radius: vw(4px);
     background-color: $PINK-MAIN;
     color: $WHITE;
-    margin-top: vw(22px);
+    margin-top: vw(12px);
   }
 }
