feat - 마이페이지 개인정보설정 페이지

--- a/frontend/src/components/common/WithSideLayout.scss
+++ b/frontend/src/components/common/WithSideLayout.scss
@@ -16,6 +16,7 @@
       margin: 0 vw(8px);
       box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2),
         0 2px 2px 0 rgba(0, 0, 0, 0.19);
+      text-align: center;
     }
   }
 }
