fix : color변수 언더바 -> 대쉬 #45

--- a/frontend/src/screens/Home.scss
+++ b/frontend/src/screens/Home.scss
@@ -107,12 +107,12 @@
     }
     .p-container {
       .logo-desc-top {
-        color: $GRAY_32;
+        color: $GRAY-32;
         margin-bottom: vw(10px);
       }
 
       .logo-desc-bottom {
-        color: $PINK_SUB;
+        color: $PINK-SUB;
       }
     }
   }
