fix : 폰트컬러 수정 #45

--- a/frontend/src/screens/Home.scss
+++ b/frontend/src/screens/Home.scss
@@ -48,7 +48,7 @@
       line-height: vw(46px);
 
       margin-bottom: vw(14px);
-
+      color: $GRAY-32;
       &--emphasis {
         color: $PINK-SUB;
         margin-bottom: vw(93px);
