fix : 돋보기 icon sizing #48

--- a/frontend/src/screens/StudyList.scss
+++ b/frontend/src/screens/StudyList.scss
@@ -86,8 +86,10 @@
 
       &__icon {
         margin-left: vw(28px);
-        width: vw(52px);
-        height: vw(52px);
+        margin-right: vw(23.5px);
+
+        width: vw(38px);
+        height: vw(38px);
       }
       &__input {
         width: vw(800px);
