--- a/frontend/src/screens/StudyDetail.scss
+++ b/frontend/src/screens/StudyDetail.scss
@@ -18,9 +18,9 @@
         padding-bottom: vw(25px);
         justify-content: space-between;
 
-        border-bottom: 1px solid $GRAY_DB;
+        border-bottom: 1px solid $GRAY-DB;
 
-        color: $GRAY_61;
+        color: $GRAY-61;
         .user {
           &__img {
             margin-right: vw(8px);
@@ -35,7 +35,7 @@
     main {
       padding: vw(37px) vw(15px) vw(11px) vw(15px);
 
-      border-bottom: 1px solid $GRAY_DB;
+      border-bottom: 1px solid $GRAY-DB;
 
       .study-info-title {
         margin-bottom: vw(8px);
@@ -44,10 +44,10 @@
         .info-line {
           &__title {
             margin-right: vw(22px);
-            color: $GRAY_9E;
+            color: $GRAY-9E;
           }
           &__data {
-            color: $GRAY_61;
+            color: $GRAY-61;
           }
           & + .info-line {
             margin-top: vw(8px);
@@ -70,7 +70,7 @@
         border-radius: 4px;
 
         color: $WHITE;
-        background-color: $PINK_SUB;
+        background-color: $PINK-SUB;
       }
 
       .icon-container {
@@ -84,7 +84,7 @@
         .icon-cnt {
           margin-right: vw(16px);
 
-          color: $GRAY_9E;
+          color: $GRAY-9E;
         }
       }
     }
@@ -107,10 +107,10 @@
           width: vw(508px);
           height: vw(42px);
 
-          border: 1px solid $PINK_SUB;
+          border: 1px solid $PINK-SUB;
           border-radius: 4px;
 
-          box-shadow: 0px 0px 4px $PINK_SUB;
+          box-shadow: 0px 0px 4px $PINK-SUB;
         }
 
         &__regist-btn {
@@ -119,7 +119,7 @@
 
           border-radius: 4px;
           color: $WHITE;
-          background-color: $PINK_MAIN;
+          background-color: $PINK-MAIN;
         }
       }
     }
