style : fs-17 타이포 추가 #50

--- a/frontend/src/assets/styles/_typography.scss
+++ b/frontend/src/assets/styles/_typography.scss
@@ -19,6 +19,9 @@
 .fs-16 {
   font-size: vw(16px);
 }
+.fs-17 {
+  font-size: vw(17px);
+}
 .fs-18 {
   font-size: vw(18px);
 }
@@ -113,6 +116,9 @@
   .fs-16 {
     font-size: vw-t(16px);
   }
+  .fs-17 {
+    font-size: vw-t(17px);
+  }
   .fs-18 {
     font-size: vw-t(18px);
   }
@@ -162,6 +168,9 @@
   }
   .fs-16 {
     font-size: vw-p(16px);
+  }
+  .fs-17 {
+    font-size: vw-p(17px);
   }
   .fs-18 {
     font-size: vw-p(18px);
