--- a/frontend/src/screens/StudyDetail.scss
+++ b/frontend/src/screens/StudyDetail.scss
@@ -107,9 +107,12 @@
           width: vw(508px);
           height: vw(42px);
 
-          border: 1px solid $PINK-SUB;
+          border: 1px solid $GRAY-DB;
           border-radius: 4px;
+        }
 
+        &__input:focus {
+          border: 1px solid $PINK-SUB;
           box-shadow: 0px 0px 4px $PINK-SUB;
         }
 
