fix : 댓글부분 폰트랑 들여쓰기 #50

--- a/frontend/src/screens/StudyDetail.scss
+++ b/frontend/src/screens/StudyDetail.scss
@@ -109,6 +109,8 @@
 
           border: 1px solid $GRAY-DB;
           border-radius: 4px;
+
+          text-indent: vw(8px);
         }
 
         &__input:focus {
