fix : 버튼 컬러 #51

--- a/frontend/src/screens/common/StudyRegistForm.scss
+++ b/frontend/src/screens/common/StudyRegistForm.scss
@@ -94,7 +94,7 @@
   }
 
   .accept-btn {
-    background-color: $PINK-LIGHT;
+    background-color: $PINK-SUB;
   }
 
   .refuse-btn {
@@ -102,6 +102,6 @@
   }
 
   .apply-btn {
-    background-color: $PINK-MAIN;
+    background-color: $PINK-SUB;
   }
 }
