--- a/frontend/src/components/common/NoContent.scss
+++ b/frontend/src/components/common/NoContent.scss
@@ -5,6 +5,7 @@
   height: 100%;
   justify-content: center;
   align-items: center;
+  color: $GRAY_61;
 
   button {
     padding: vw(10px) vw(20px);
