--- a/frontend/src/components/common/WithSideLayout.scss
+++ b/frontend/src/components/common/WithSideLayout.scss
@@ -14,8 +14,7 @@
       font-size: vw(13px);
       color: $GRAY-9E;
       margin: 0 vw(8px);
-      box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2),
-        0 2px 2px 0 rgba(0, 0, 0, 0.19);
+      box-shadow: 0px 0px 10px 2px rgba(169, 169, 169, 0.29);
       text-align: center;
     }
   }
