fix - 쪽지함 리스트 폰트수정, 폰트정렬 #53

--- a/frontend/src/components/Letters/Letter.scss
+++ b/frontend/src/components/Letters/Letter.scss
@@ -2,7 +2,6 @@
   display: grid;
   padding: vw(5px);
   grid-template-columns: 1fr 4fr 10fr 5fr;
-  vertical-align: middle;
   color: $GRAY-9E;
   border-bottom: 1px solid $GRAY-DB;
   & > * {
@@ -12,5 +11,9 @@
   }
   &.unread {
     color: $BLUE;
+  }
+  p {
+    display: flex;
+    align-self: center;
   }
 }
