--- a/frontend/src/components/Letters/LettersList.scss
+++ b/frontend/src/components/Letters/LettersList.scss
@@ -4,30 +4,29 @@
     display: grid;
     padding: vw(5px);
     grid-template-columns: 1fr 4fr 10fr 5fr;
-    vertical-align: middle;
     color: $GRAY-9E;
     & > * {
       padding: vw(5px);
       padding-left: vw(10px);
       position: relative;
     }
-    & > *:before {
-      content: "";
-      position: absolute;
-      left: 0;
-      bottom: 30%;
-      width: 100%;
-      height: 50%;
-      border-right: 1px solid $GRAY-DB;
-      z-index: -1;
+    p {
+      display: flex;
+      align-self: center;
+      &::before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        border-left: 1px solid $GRAY-DB;
+      }
     }
   }
   input {
     display: block;
     width: vw(16px);
     height: vw(16px);
-  }
-  p {
-    line-height: vw(18px);
   }
 }
