--- a/frontend/src/components/MyPage/ApplicationHistory.scss
+++ b/frontend/src/components/MyPage/ApplicationHistory.scss
@@ -1,25 +1,28 @@
 .application-list {
   .application-list-header {
-    border-bottom: 1px solid $PINK-SUB !important;
     display: grid;
     padding: vw(5px);
     grid-template-columns: 1fr 10fr 4fr;
-    vertical-align: middle;
+    border-bottom: 1px solid $PINK-SUB !important;
     color: $GRAY-9E;
     & > * {
       padding: vw(5px);
       padding-left: vw(10px);
       position: relative;
     }
-    & > *:before {
-      content: "";
-      position: absolute;
-      left: 0;
-      bottom: 30%;
-      width: 100%;
-      height: 50%;
-      border-right: 1px solid $GRAY-DB;
-      z-index: -1;
+
+    p {
+      display: flex;
+      align-self: center;
+      &::before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        border-left: 1px solid $GRAY-DB;
+      }
     }
   }
   .application {
@@ -32,6 +35,10 @@
     .application-name {
       color: $BLUE;
     }
+    p {
+      display: flex;
+      align-self: center;
+    }
     & > * {
       padding: vw(5px);
       padding-left: vw(10px);
@@ -43,8 +50,5 @@
     display: block;
     width: vw(16px);
     height: vw(16px);
-  }
-  p {
-    line-height: vw(18px);
   }
 }
