--- a/frontend/src/components/MyPage/PostCard.scss
+++ b/frontend/src/components/MyPage/PostCard.scss
@@ -4,27 +4,38 @@
   margin-top: vw(30px);
   padding: vw(15px) vw(20px);
   border-radius: 10px;
-  box-shadow: 5px 0 10px 5px rgba(0, 0, 0, 0.1),
-    2px 2px 2px 0 rgba(0, 0, 0, 0.19);
-
+  box-shadow: 0px 0px 10px 2px rgba(169, 169, 169, 0.29);
+  .category {
+    color: $GRAY-9E;
+  }
+  .content {
+    color: $GRAY-32;
+  }
   p {
-    padding: 5px;
+    padding: vw(5px);
   }
   .post-card-footer {
     display: flex;
-    margin-top: 15px;
-
+    margin-top: vw(15px);
+    color: $GRAY-9E;
     .post-card-footer-item {
       display: flex;
-      margin-right: 15px;
+      margin-right: vw(15px);
+      align-items: center;
       .avatar {
         fill: $SKYBLUE;
+        width: vw(20px);
+        height: vw(20px);
       }
       .eye {
         fill: $GRAY-76;
+        width: vw(20px);
+        height: vw(20px);
       }
       .heart {
         fill: $PINK-SUB;
+        width: vw(20px);
+        height: vw(20px);
       }
     }
   }
