--- a/frontend/src/components/Letters/Letter.scss
+++ b/frontend/src/components/Letters/Letter.scss
@@ -4,6 +4,16 @@
   grid-template-columns: 1fr 4fr 10fr 5fr;
   color: $GRAY-9E;
   border-bottom: 1px solid $GRAY-DB;
+  cursor: pointer;
+  .content {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    display: block;
+  }
+  &:hover {
+    background-color: $GRAY-ED;
+  }
   & > * {
     padding: vw(5px);
     padding-left: vw(10px);
