--- a/frontend/src/screens/login/NewPw.scss
+++ b/frontend/src/screens/login/NewPw.scss
@@ -1,26 +1,25 @@
 #new_pw {
   margin: vw(100px) vw(483px);
-
+  padding: vw(64px) vw(72px);
   border-radius: vw(20px);
   width: vw(473px);
-  height: vw(530px);
   border: solid 1px $GRAY-DB;
 
-  .info_text {
-    margin: vw(64px) vw(70px) vw(32px) vw(72px);
-
+  .new_pw_text {
+    padding-bottom: vw(40px);
     &_title {
       line-height: vw(35px);
     }
   }
 
-  .info_input {
+  .new_pw_input {
+    margin-bottom: vw(36px);
     &_title {
-      margin: 0 0 vw(8px) 0;
+      margin-bottom: vw(12px);
       line-height: 23px;
     }
     input {
-      border: solid vw(1px) $GRAY-DB;
+      border: solid 1px $GRAY-DB;
       padding-left: vw(12px);
       height: vw(48px);
       width: vw(329px);
@@ -38,7 +37,7 @@
     }
   }
 
-  .join_info_next_btn {
+  .join_new_pw_next_btn {
     width: vw(329px);
     height: vw(48px);
     border-radius: vw(4px);
