fix : input focus 변경 (#65, #66)

--- a/frontend/src/screens/login/Login.scss
+++ b/frontend/src/screens/login/Login.scss
@@ -68,6 +68,10 @@
       border-radius: vw(4px);
     }
 
+    input:focus {
+      border: 1px solid $PINK-SUB;
+      box-shadow: 0px 0px 4px #ff3387;
+    }
     &_box {
       margin-bottom: vw(20px);
     }
