--- a/frontend/src/screens/join/Join.scss
+++ b/frontend/src/screens/join/Join.scss
@@ -73,6 +73,10 @@
       width: vw(329px);
       border-radius: vw(4px);
     }
+    input:focus {
+      border: 1px solid $PINK-SUB;
+      box-shadow: 0px 0px 4px #ff3387;
+    }
 
     &_box {
       margin-bottom: vw(12px);
