--- a/frontend/src/screens/join/JoinAdd.scss
+++ b/frontend/src/screens/join/JoinAdd.scss
@@ -25,6 +25,10 @@
       width: vw(329px);
       border-radius: vw(4px);
     }
+    input:focus {
+      border: 1px solid $PINK-SUB;
+      box-shadow: 0px 0px 4px #ff3387;
+    }
 
     &_box {
       margin-bottom: vw(16px);
@@ -34,10 +38,6 @@
       color: $GRAY-76;
       line-height: vw(17px);
       margin-top: vw(8px);
-    }
-
-    &_email {
-      background-color: $GRAY-DB;
     }
 
     .join_address_btn {
