--- a/frontend/src/screens/join/JoinUserInfo.scss
+++ b/frontend/src/screens/join/JoinUserInfo.scss
@@ -25,6 +25,13 @@
       width: vw(329px);
       border-radius: vw(4px);
     }
+    input:focus {
+      border: 1px solid $PINK-SUB;
+      box-shadow: 0px 0px 4px #ff3387;
+    }
+    input:disabled {
+      background-color: $GRAY-DB;
+    }
 
     &_box {
       margin-bottom: vw(16px);
@@ -34,10 +41,6 @@
       color: $RED;
       line-height: vw(17px);
       margin-top: vw(8px);
-    }
-
-    &_email {
-      background-color: $GRAY-DB;
     }
   }
 
