fix : 라우팅 수정(#65)

--- a/frontend/src/screens/join/JoinFinish.scss
+++ b/frontend/src/screens/join/JoinFinish.scss
@@ -29,4 +29,12 @@
     color: $WHITE;
     margin-top: vw(22px);
   }
+  .more_info_btn {
+    width: vw(240px);
+    height: vw(48px);
+    border-radius: vw(4px);
+    background-color: $GRAY-CB;
+    color: $WHITE;
+    margin-top: vw(22px);
+  }
 }
