--- a/frontend/src/screens/join/JoinFinish.scss
+++ b/frontend/src/screens/join/JoinFinish.scss
@@ -17,6 +17,9 @@
       margin-bottom: vw(24px);
     }
     &_desc {
+      span {
+        color: $PINK-SUB;
+      }
       line-height: vw(23px);
     }
   }
