--- a/frontend/src/screens/StudyList.scss
+++ b/frontend/src/screens/StudyList.scss
@@ -45,7 +45,7 @@
 
       input[type="radio"],
       input[type="checkbox"] {
-        margin-right: vw(4px);
+        margin-right: vw(8px);
 
         width: vw(17px);
         height: vw(17px);
@@ -94,6 +94,8 @@
       }
       &__input {
         width: vw(200px);
+        color: $GRAY-9E;
+
         &:focus {
           border-bottom: 1px solid $PINK-SUB;
         }
