--- a/frontend/src/screens/StudyList.scss
+++ b/frontend/src/screens/StudyList.scss
@@ -41,6 +41,10 @@
       label {
         margin-right: vw(15px);
         white-space: nowrap;
+
+        input {
+          vertical-align: text-top;
+        }
       }
 
       input[type="radio"],
