--- a/frontend/src/components/StudyDetail/Comment.scss
+++ b/frontend/src/components/StudyDetail/Comment.scss
@@ -36,7 +36,7 @@
 
     border-radius: 4px;
     &:hover {
-      background-color: $PINK-SUB;
+      background-color: $PINK-LIGHT;
       color: $WHITE;
       cursor: pointer;
     }
