fix : 홈페이지 퍼블리싱 (#46)
* setup : craco images 경로 설정

* style : font-size 32 추가

* feat: 메인 헤더바 퍼블리싱 #9

* fix : 라우팅 주소 소문자

* feat : 홈페이지 퍼블리싱 Card 전까지 #9

* setup : props 타입설정 디펜던시 추가

* feat : 홈페이지 퍼블리싱 마무리 #9

* feat : 로고 아이콘 추가 #9

* fix: card-desc 반응형

* fix : NavBar 버튼 색깔 안바뀜

* feat : 메인페이지 배너 #16

* feat : 카운트 M,K & 폴더구조 추가 #16

* feat : 스터디카드(공통 컴포넌트) #16

* fix : 스터디카드리스트 부분 title

* fix : 라우터 경로 오류

* feat : 스터디 찾기 페이지 퍼블리싱 #21

* fix : 언더바->대쉬

* fix : NavBar 라우팅 #45

* fix : color변수 언더바 -> 대쉬 #45

* fix : 폰트컬러 수정 #45

--- a/frontend/src/screens/Home.scss
+++ b/frontend/src/screens/Home.scss
@@ -12,23 +12,23 @@
       margin-top: vw(16px);
       margin-bottom: vw(63px);
 
-      color: $PINK_SUB;
+      color: $PINK-SUB;
     }
 
     &__btn {
       width: vw(181px);
       height: vw(52px);
 
-      border: 1px solid $PINK_SUB;
+      border: 1px solid $PINK-SUB;
       border-radius: 18px;
 
       & + .banner__btn {
         margin-left: vw(24px);
-        background-color: $PINK_SUB;
+        background-color: $PINK-SUB;
         color: $WHITE;
       }
       &--regist {
-        color: $PINK_SUB;
+        color: $PINK-SUB;
       }
     }
 
@@ -48,9 +48,9 @@
       line-height: vw(46px);
 
       margin-bottom: vw(14px);
-
+      color: $GRAY-32;
       &--emphasis {
-        color: $PINK_SUB;
+        color: $PINK-SUB;
         margin-bottom: vw(93px);
       }
 
@@ -73,11 +73,11 @@
 
           margin-bottom: vw(25px);
 
-          border-top: solid 1px $GRAY_CB;
+          border-top: solid 1px $GRAY-CB;
         }
 
         .desc {
-          color: $GRAY_61;
+          color: $GRAY-61;
           line-height: vw(26px);
         }
         & + .main__desc-card {
@@ -107,12 +107,12 @@
     }
     .p-container {
       .logo-desc-top {
-        color: $GRAY_32;
+        color: $GRAY-32;
         margin-bottom: vw(10px);
       }
 
       .logo-desc-bottom {
-        color: $PINK_SUB;
+        color: $PINK-SUB;
       }
     }
   }
