fix - 스터디개설 폼

--- a/frontend/src/components/common/Modal.scss
+++ b/frontend/src/components/common/Modal.scss
@@ -8,6 +8,7 @@
   z-index: 99;
   background-color: rgba(0, 0, 0, 0.6);
   font-family: "NotoSansMedium";
+  font-size: 16px;
 }
 .modal button {
   outline: none;
