--- a/frontend/src/screens/common/StudyRegistForm.scss
+++ b/frontend/src/screens/common/StudyRegistForm.scss
@@ -19,6 +19,9 @@
   .user {
     margin-bottom: vw(16px);
 
+    &__name {
+      line-height: vw(35px);
+    }
     &__img {
       margin-bottom: vw(12px);
 
@@ -61,15 +64,17 @@
     margin-left: auto;
   }
 
-  input:focus {
+  input:focus,
+  textarea:focus {
+    outline: none;
     border: 1px solid $PINK-SUB;
+    box-shadow: 0px 0px 4px $PINK-SUB;
   }
   textarea {
     border: 1px solid $GRAY-DB;
     border-radius: 4px;
 
     line-height: vw(22px);
-    outline-color: $PINK-SUB;
   }
 
   .question-title {
@@ -94,7 +99,7 @@
   }
 
   .accept-btn {
-    background-color: $PINK-LIGHT;
+    background-color: $PINK-SUB;
   }
 
   .refuse-btn {
@@ -102,6 +107,6 @@
   }
 
   .apply-btn {
-    background-color: $PINK-MAIN;
+    background-color: $PINK-SUB;
   }
 }
