--- a/frontend/src/components/Letters/LettersSideBar.scss
+++ b/frontend/src/components/Letters/LettersSideBar.scss
@@ -14,8 +14,11 @@
       width: vw(90px);
       fill: $PINK-SUB;
     }
+    .name {
+      margin-bottom: vw(4px);
+    }
     .edit {
-      margin: vw(20px);
+      margin: vw(20px) 0 vw(40px);
       text-decoration: underline;
       color: $GRAY-9E;
       :hover {
@@ -43,6 +46,6 @@
 
   hr {
     border: none;
-    border-bottom: 1px solid $PINK-SUB;
+    border-bottom: 1px solid $PINK-F3;
   }
 }
