fix : 마이페이지, 쪽지함 퍼블리싱 수정 (#54)
* fix - 공통컴포넌트 스타일 수정

* fix - 쪽지함 리스트 폰트수정, 폰트정렬 #53

* fix - 스터디 신청내역 폰트 수정 #53

* fix - 카드 그림자 수정 #53

* fix - 마이페이지 폰트 , 폰트정렬 수정 #53

* feat - 스터디 개설 페이지

* fix - 스타일 수정 #53

--- a/frontend/src/components/MyPage/Index.scss
+++ b/frontend/src/components/MyPage/Index.scss
@@ -3,9 +3,10 @@
   height: vw(100px);
   display: flex;
   justify-content: space-around;
-
+  margin-top: vw(42px);
   .divider {
-    border: 1px solid $GRAY-DB;
+    border: none;
+    border-right: 1px solid $GRAY-DB;
   }
   .activity-item {
     display: flex;
@@ -14,6 +15,7 @@
     align-items: center;
     .activity-item-title {
       padding: 10px;
+      color: $GRAY-61;
     }
   }
 }
