--- a/frontend/src/components/Letters/LettersSideBar.scss
+++ b/frontend/src/components/Letters/LettersSideBar.scss
@@ -14,21 +14,23 @@
       width: vw(90px);
       fill: $PINK-SUB;
     }
-    .edit:hover {
-      cursor: pointer;
+    .name {
+      margin-bottom: vw(4px);
     }
-    & :last-child {
-      margin: vw(20px);
+    .edit {
+      margin: vw(20px) 0 vw(40px);
       text-decoration: underline;
-      color: $GRAY-76;
-    }
-
-    * {
-      margin: vw(5px);
+      color: $GRAY-9E;
+      :hover {
+        cursor: pointer;
+      }
     }
   }
 
   .menu {
+    .menu-title {
+      margin-bottom: vw(16px);
+    }
     .sub-menu-title {
       color: $GRAY-76;
     }
@@ -40,5 +42,10 @@
   a {
     display: block;
     margin: vw(14px) vw(5px);
+  }
+
+  hr {
+    border: none;
+    border-bottom: 1px solid $PINK-F3;
   }
 }
