--- a/frontend/src/components/MyPage/StudyManagement.scss
+++ b/frontend/src/components/MyPage/StudyManagement.scss
@@ -3,49 +3,62 @@
   .member-list-header {
     border-bottom: 1px solid $PINK-SUB !important;
     display: grid;
-    padding: vw(5px);
+    padding: vw(8px);
     grid-template-columns: 2.5fr 2.5fr 1.5fr 1.5fr 3fr;
     vertical-align: middle;
     color: $GRAY-9E;
     & > * {
-      padding: vw(5px);
+      padding: vw(8px);
       padding-left: vw(10px);
       position: relative;
     }
-    & > *:before {
-      content: "";
-      position: absolute;
-      left: 0;
-      bottom: 30%;
-      width: 100%;
-      height: 50%;
-      border-right: 1px solid $GRAY-DB;
-      z-index: -1;
+
+    p {
+      display: flex;
+      align-self: center;
+      &:not(:first-child)::before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        border-left: 1px solid $GRAY-DB;
+      }
     }
   }
   .study,
   .member {
     border-bottom: 1px solid $GRAY-CB !important;
     display: grid;
-    padding: vw(5px);
+    padding: vw(8px);
     grid-template-columns: 2.5fr 2.5fr 1.5fr 1.5fr 3fr;
     vertical-align: middle;
     color: $GRAY-61;
+    .actions {
+      button {
+        margin-right: vw(10px);
+        font: inherit;
+        word-break: keep-all;
+      }
+      button:first-of-type {
+        padding-left: 0;
+      }
+    }
     & > * {
       padding: vw(5px);
       padding-left: vw(10px);
       position: relative;
+      display: flex;
+      align-self: center;
     }
     button {
       color: $PINK-SUB;
     }
   }
-  p {
-    line-height: vw(18px);
-  }
   .divider {
     border: 0;
-    border-top: 3px solid $PINK-LIGHT;
+    border-top: 1px solid $PINK-LIGHT;
     margin: vw(50px) 0;
   }
   .subheader {
