fix : 스터디 상세보기 페이지 퍼블리싱  (#62)
* feat : 스터디 상세내용 #26

* feat : 댓글 퍼블리싱 #26

* feat :사이드 스터디 리스트 #26

* fix : 좋아요/조회 수 폰트 #50

* fix : Scss 언더스코어 -> 대쉬 #50

* style : fs-17 타이포 추가 #50

* feat : 댓글창 포커싱 되면 색깔 #50

* fix : 댓글부분 폰트랑 들여쓰기 #50

* fix : header 여백 #50

* feat : 댓글 쪽지보내기 모달 #50

* fix : scss 언더스코어 ->대쉬

* style : line-height 추가

* style : tooltip 색깔 변경

* feat : 댓글input autoResizing

* fix : 툴팁 폰트

--- a/frontend/src/screens/StudyDetail.scss
+++ b/frontend/src/screens/StudyDetail.scss
@@ -13,14 +13,17 @@
     width: vw(670px);
 
     .header {
+      .title {
+        line-height: vw(35px);
+      }
       .info {
-        margin-top: vw(16px);
+        margin-top: vw(18px);
         padding-bottom: vw(25px);
         justify-content: space-between;
 
-        border-bottom: 1px solid $GRAY_DB;
+        border-bottom: 1px solid $GRAY-DB;
 
-        color: $GRAY_61;
+        color: $GRAY-61;
         .user {
           &__img {
             margin-right: vw(8px);
@@ -35,19 +38,23 @@
     main {
       padding: vw(37px) vw(15px) vw(11px) vw(15px);
 
-      border-bottom: 1px solid $GRAY_DB;
+      border-bottom: 1px solid $GRAY-DB;
 
       .study-info-title {
         margin-bottom: vw(8px);
       }
       .study-info {
+        &-title {
+          line-height: vw(29px);
+        }
         .info-line {
+          line-height: vw(20px);
           &__title {
             margin-right: vw(22px);
-            color: $GRAY_9E;
+            color: $GRAY-9E;
           }
           &__data {
-            color: $GRAY_61;
+            color: $GRAY-61;
           }
           & + .info-line {
             margin-top: vw(8px);
@@ -70,7 +77,7 @@
         border-radius: 4px;
 
         color: $WHITE;
-        background-color: $PINK_SUB;
+        background-color: $PINK-SUB;
       }
 
       .icon-container {
@@ -83,6 +90,8 @@
 
         .icon-cnt {
           margin-right: vw(16px);
+
+          color: $GRAY-9E;
         }
       }
     }
@@ -101,14 +110,20 @@
 
         &__input {
           margin-right: vw(20px);
+          padding: vw(8px);
 
+          resize: none;
           width: vw(508px);
           height: vw(42px);
 
-          border: 1px solid $PINK_SUB;
+          border: 1px solid $GRAY-DB;
           border-radius: 4px;
+          outline: none;
+        }
 
-          box-shadow: 0px 0px 4px $PINK_SUB;
+        &__input:focus {
+          border: 1px solid $PINK-SUB;
+          box-shadow: 0px 0px 4px $PINK-SUB;
         }
 
         &__regist-btn {
@@ -117,7 +132,7 @@
 
           border-radius: 4px;
           color: $WHITE;
-          background-color: $PINK_MAIN;
+          background-color: $PINK-MAIN;
         }
       }
     }
