fix 쪽지 모달 받는사람 보낸사람 폰트크기 조정 #61

--- a/frontend/src/components/Letters/LetterModal.scss
+++ b/frontend/src/components/Letters/LetterModal.scss
@@ -13,7 +13,9 @@
       border: 1px solid $PINK-SUB;
     }
   }
-
+  p:first-child {
+    font-size: vw(10px);
+  }
   .content-cnt {
     font-size: 10px;
     text-align: right;
