feat - 쪽지 모달, 스터디 개설 컴포넌트 (#72)
* fix - 공통컴포넌트 스타일 수정

* fix - 쪽지함 리스트 폰트수정, 폰트정렬 #53

* fix - 스터디 신청내역 폰트 수정 #53

* fix - 카드 그림자 수정 #53

* fix - 마이페이지 폰트 , 폰트정렬 수정 #53

* feat - 스터디 개설 페이지

* feat - 모달 컴포넌트 , 스타일링 #61

* feat - 쪽지 열기 , 보내기 모달 개발 #61

* fix - 스터디개설 폼

* fix 쪽지 모달 받는사람 보낸사람 폰트크기 조정 #61

* feat - 스터디 개설 컴포넌트 , 쪽지 모달

* fix - 쪽지 체크박스 클릭 이벤트 버블링 수정 #61

* fix - 스터디개설페이지 디자인 수정 #61

--- a/frontend/src/screens/common/StudyCreateForm.scss
+++ b/frontend/src/screens/common/StudyCreateForm.scss
@@ -1,5 +1,36 @@
 .study-regist-form {
   padding: vw(70px) vw(435px) vw(400px) vw(435px);
+  .edit_category {
+    margin: vw(8px) 0;
+    text-align: left;
+    padding: 0 0 vw(12px) 0;
+
+    &_title {
+      line-height: vw(23px);
+      margin: vw(8px) 0 vw(20px) 0;
+    }
+
+    &_options {
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    button {
+      width: vw(64px);
+      height: vw(32px);
+      margin: 0 vw(12px) vw(8px) 0;
+
+      border: 1px solid #ff79ab;
+      border-radius: 10px;
+
+      &:hover,
+      &:active {
+        color: $WHITE;
+        background-color: $PINK-LIGHT;
+      }
+    }
+  }
 
   .back-btn {
     margin-right: auto;
@@ -19,6 +50,7 @@
   .type {
     margin-right: auto;
     margin-bottom: vw(8px);
+    line-height: vw(23px);
   }
   .options {
     width: 100%;
@@ -109,6 +141,7 @@
       button {
         padding: 5px;
         width: vw(40px);
+        color: $GRAY-61;
       }
     }
     .question-plus {
