fix : observer 사이징 #81

--- a/frontend/src/components/Main/InfinityStudyCardList.scss
+++ b/frontend/src/components/Main/InfinityStudyCardList.scss
@@ -14,4 +14,8 @@
     height: vw(50px);
     animation: spin 1s linear infinite;
   }
+  .observerTarget {
+    width: 100%;
+    height: vw(40px);
+  }
 }
