--- a/frontend/src/components/Main/StudyCard.scss
+++ b/frontend/src/components/Main/StudyCard.scss
@@ -46,4 +46,15 @@
       color: $GRAY_9E;
     }
   }
+
+  &:hover {
+    cursor: pointer;
+    transform: scale(1.02);
+    transition: linear;
+    filter: drop-shadow(0px 6px 6px rgba(255, 121, 171, 0.25));
+  }
+}
+
+.dummy {
+  visibility: hidden;
 }
