feat : 댓글 구현 #109

--- a/frontend/src/components/StudyDetail/Comment.scss
+++ b/frontend/src/components/StudyDetail/Comment.scss
@@ -1,3 +1,9 @@
+.recomment-arrow {
+  margin: vw(34px) vw(4px) 0 vw(24px);
+  width: vw(29px);
+  height: vw(29px);
+}
+
 #comment {
   padding-top: vw(32px);
   width: 100%;
