--- a/frontend/src/components/StudyDetail/CommentInput.scss
+++ b/frontend/src/components/StudyDetail/CommentInput.scss
@@ -1,5 +1,6 @@
 .comment-input {
-  margin-bottom: vw(57px); // 89-32
+  margin: vw(12px) 0 vw(12px) 0;
+  // margin-bottom: vw(57px); // 89-32
   &__user-img {
     margin-right: vw(20px);
 
