--- a/frontend/src/components/StudyDetail/Comment.scss
+++ b/frontend/src/components/StudyDetail/Comment.scss
@@ -1,3 +1,9 @@
+.recomment-arrow {
+  margin: vw(34px) vw(4px) 0 vw(24px);
+  width: vw(29px);
+  height: vw(29px);
+}
+
 #comment {
   padding-top: vw(32px);
   width: 100%;
@@ -27,6 +33,16 @@
 
     color: $GRAY-61;
   }
+
+  .reply-btn {
+    padding: 0;
+    img {
+      margin: 0 vw(5px) 0 vw(5px);
+      width: vw(15px);
+      height: vw(15px);
+    }
+  }
+
   #tooltip {
     display: none;
     position: absolute;
